# yet_another_pipeline

./: .env  README.md  cloudbuild.yaml  deploy.sh  pyproject.toml
src/api_client/: Dockerfile  api_client.py  app.py
src/api_client/data/: funnymemes_images.json  pics_images.json
src/bq_manager/: Dockerfile  app.py  bq_manager.py
src/gcs_manager/: Dockerfile  app.py  gcs_manager.py
src/orchestrator/: Dockerfile  app.py  orchestrator.py
src/shared/: kebab_case.py  logger.py
